# confPy6

./: .gitignore  CITATION.cff  ExampleConfig.py  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
examples/: ApplicationConfig.py  LaserConfig.py  config.yaml  main.py
examples/example/: ApplicationConfig.py  LaserConfig.py  main.py
examples/example2/: ApplicationConfig.py  LaserConfig.py  main.py
examples/example3/: ApplicationConfig.py  LaserConfig.py  main.py
examples/example4/: ApplicationConfig.py  main.py
src/confPy6/controller/: ConfigNode.py  Field.py
src/confPy6/resources/: convert.sh
src/confPy6/view/: ConfigEditor.py  ConfigView.py  FieldView.py
src/confighandler/: __init__.py
src/confighandler/controller/: CObject.py  CSignal.py  ConfigNode.py  Field.py  VASInputFileParser.py
src/confighandler/resources/: resources.qrc
src/confighandler/view/: ConfigView.py  ConfigViewOld.py  FieldView.py
tests/: BConf.py  BConfSub.py  BConf_BConfSub.py  BasicTesting.py  UITesting.py
tests/assert_configs/TestCaseOpenConfig/: TC_OpenConfig_test_open_config_1.yaml  TC_OpenConfig_test_open_config_2.yaml  TC_test_open_config_wrong_int_type_1.yaml
tests/assert_configs/TestCaseStoreConfigs/: TC_test_store_BConf_1.yaml  TC_test_store_BConf_2.yaml  TC_test_store_BConf_BConfSub_1.yaml  TC_test_store_BConf_BConfSub_2.yaml  TC_test_store_BConf_BConfSub_3.yaml  TC_test_store_BConf_BConfSub_4.yaml  (+1 more)
tests/old/: AppSettings.py  ConfigGenerator.py  TestConfig.py  testfile.py  tf2.py
(+22 files in other folders)
